AArch64 build failures after JDK-8229836 (Remove include of globals.hpp from allocation.hpp)

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P1
    • 14
    • Affects Version/s: 14
    • Component/s: hotspot
    • None
    • gc
    • b12

      /home/shade/jdk-jdk/src/hotspot/os_cpu/linux_aarch64/gc/z/zPhysicalMemoryBacking_linux_aarch64.cpp: In member function 'void ZPhysicalMemoryBacking::map(const ZPhysicalMemory&, uintptr_t) const':
      /home/shade/jdk-jdk/src/hotspot/os_cpu/linux_aarch64/gc/z/zPhysicalMemoryBacking_linux_aarch64.cpp:300:7: error: 'ZVerifyViews' was not declared in this scope
         if (ZVerifyViews) {
             ^
      /home/shade/jdk-jdk/src/hotspot/os_cpu/linux_aarch64/gc/z/zPhysicalMemoryBacking_linux_aarch64.cpp:302:44: error: 'AlwaysPreTouch' was not declared in this scope
           map_view(pmem, ZAddress::good(offset), AlwaysPreTouch);
                                                  ^
      /home/shade/jdk-jdk/src/hotspot/os_cpu/linux_aarch64/gc/z/zPhysicalMemoryBacking_linux_aarch64.cpp:305:47: error: 'AlwaysPreTouch' was not declared in this scope
           map_view(pmem, ZAddress::marked0(offset), AlwaysPreTouch);
                                                     ^
      /home/shade/jdk-jdk/src/hotspot/os_cpu/linux_aarch64/gc/z/zPhysicalMemoryBacking_linux_aarch64.cpp: In member function 'void ZPhysicalMemoryBacking::unmap(const ZPhysicalMemory&, uintptr_t) const':
      /home/shade/jdk-jdk/src/hotspot/os_cpu/linux_aarch64/gc/z/zPhysicalMemoryBacking_linux_aarch64.cpp:312:7: error: 'ZVerifyViews' was not declared in this scope
         if (ZVerifyViews) {
             ^
      In file included from /home/shade/jdk-jdk/src/hotspot/share/utilities/globalDefinitions.hpp:29:0,
         ... (rest of output omitted)

            Assignee:
            Aleksey Shipilev
            Reporter:
            Aleksey Shipilev
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: